# fake_localization_ros2

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
include/: FakeOdomNode.hpp
launch/: fake_localization.launch.py
src/: FakeOdomNode.cpp  fake_localization.cpp
