<?xml version="2.0"?>
<package format="3">
    <name>fake_localization_ros2</name>
    <version>2.1.0</version>
    <description>A ROS node that simply forwards odometry information.</description>
    <author>Rui P. Rocha</author>    
    <author>Ioan A. Sucan</author>
    <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>angles</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>tf2_ros</depend>
    <depend>rclcpp_components</depend>    

    <export>                               
        <build_type>ament_cmake</build_type> 
    </export> 

</package>
